# rust-secure-api

./: Cargo.toml  Dockerfile  docker-compose.yml  readme.md
.github/workflows/: ci.yml
src/: config.rs  db.rs  main.rs
src/auth/: handlers.rs  jwt.rs  password.rs
src/docs/: api_doc.rs
src/middleware/: mod.rs  rate_limit.rs  user_rate_limiter.rs
src/models/: user.rs
src/routes/: auth_routes.rs  mod.rs  protected.rs
