[package]
name = "rust-secure-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# JSON, serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Env vars
dotenvy = "0.15"

# PostgreSQL async driver
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "macros",
] }

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Middleware, CORS, etc
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
http = "0.2"

# Logging & time
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
